hooked up tender updates and publish

--- a/views/tenders/new.jade
+++ b/views/tenders/new.jade
@@ -9,5 +9,5 @@ block content
       option(value='default', selected='', disabled='') Type
       option(value='service') Service
       option(value='goods') Goods
-    input(type='number', name='user_id', value='#{current_user_id}', placeholder='User Id')
+    input(type='number', name='user_id', value='#{current_user_id}', hidden)
     input#submit_button(type='submit', name='', value='Create New Tender')
