still in progress

--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -10,10 +10,12 @@ block content
   
   script(type='text/javascript').
     var coords = locations;
-    console.log(coords);
   
   body.dash
   main
+    section#testing-geo
+      for loc in locations
+        p=loc.position
     section.carousel.slider
       a.carousel-item.boo(href='#one!')
         img(src='https://www.sethsbikehacks.com/wp-content/uploads/2016/06/mongoose-dolomite.jpg')
