--- a/public/stylesheets/tenders/style_index.css
+++ b/public/stylesheets/tenders/style_index.css
@@ -1,19 +1,21 @@
-#parent{
-  width: 100%;
-  height: 100%;
+
+#all{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-#all{
   overflow: scroll;
-  display: inline-block;
+  margin: 3%;
+}
+
+#tendersAll{
+  width:80%;
 }
 
 div#add_tender_butt{
   width: 270px;
   height: 100px;
+
 }
 
 .btn-large {
@@ -28,12 +30,11 @@ div#add_tender_butt{
 
 }
 
-div.col.s12.m7{
-  width: 500px;
-  height: 300px;
+div.col.s12.m7.allTenders{
+  width: 300px;
+  height: 200px;
   margin-left: 1%;
   display: inline-block;
-
 }
 div.card-image{
   background-size: cover
