add delete button

--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -62,6 +62,9 @@ block content
             p=tender.description
             p=tender.tender_type
             p=tender.username
+            p closed
+            form(action='/tenders/'+tender.id+'/delete', method='get')
+              input#submit_button(type='submit', name='', value='Delete')
       a.dash-link(href='#') View All  My Tenders
     section#bids
       section#bids-sent
