--- a/public/stylesheets/style_dashboard.css
+++ b/public/stylesheets/style_dashboard.css
@@ -60,6 +60,7 @@
 }
 .boo{
   box-shadow: 5px 5px 2px black;
+  width: 150px;
 }
 .dashboard-bids-sent{
   border: 2px solid black;
@@ -82,4 +83,8 @@
 }
 .dashy_link{
   color: black;
+}
+.boo_img{
+  width: 100%;
+  height: 100%;
 }
