--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,6 +15,7 @@ html
     link(rel='stylesheet', href='/stylesheets/tenders/style_new.css')
     link(rel='stylesheet', href='/stylesheets/style_splash.css')
     link(rel='stylesheet', href='/stylesheets/users/style_profile.css')
+    link(rel='stylesheet', href='/stylesheets/users/style_edit.css')
     link(rel='stylesheet', href='/stylesheets/tenders/style_show.css')
     link(rel='stylesheet', href='/stylesheets/style_dashboard.css')
     link(rel='stylesheet', href='/stylesheets/style_FAQ.css')
