--- a/public/stylesheets/tenders/style_new.css
+++ b/public/stylesheets/tenders/style_new.css
@@ -46,3 +46,9 @@ button.btn.waves-effect.waves-light#submit{
   border: black solid 1px;
   margin-top: 30px;
 }
+
+#new-tender-file{
+  background-color: white;
+  color: black;
+  border: solid black 1px;
+}
