--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,6 +11,7 @@ html
     link(href='/stylesheets/age-verification.css', rel='stylesheet')
     link(rel='stylesheet', href='/stylesheets/bidder/style_index.css')
     link(rel='stylesheet', href='/stylesheets/bidder/style_show.css')
+    link(rel='stylesheet', href='/stylesheets/bidder/style_bids-recieved.css')
     link(rel='stylesheet', href='/stylesheets/tenders/style_index.css')
     link(rel='stylesheet', href='/stylesheets/tenders/style_new.css')
     link(rel='stylesheet', href='/stylesheets/style_splash.css')
