--- a/views/bids_received/index.jade
+++ b/views/bids_received/index.jade
@@ -1,5 +1,25 @@
 extends ../layout
 
 block content
-  h1 Bids Received
-  p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  div#parent
+    h1 New bid recieved
+    p.bid-recieved-text Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
+    | sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+    | Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
+    | aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
+    | voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint 
+    | occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit 
+    | anim id est laborum.
+    
+    div.row
+    div.col.s12.m6
+      div.card.blue-grey.darken-1
+        div.card-image
+          img(src="http://www.benewed.com/wp-content/uploads/2013/04/colab01.jpg")
+        div.card-content.white-text
+          span.card-title Card Title
+          p.bid-recieved-text I am a very simple card. I am good at containing small bits of information.
+          | I am convenient because I require little markup to use effectively.
+        div.card-action
+          a(href="#") Accept
+          a(href="#") Decline
